<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Profile"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending_approvals"
            android:id="@+id/pend"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name99"
        android:inputType="text"
        android:id="@+id/snm"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/incharge_usn"
            android:inputType="text"
            android:id="@+id/sinc"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_startup"
        android:id="@+id/ssb"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name99"
            android:id="@+id/cnm"
            android:inputType="text" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/incharge_usn"
            android:id="@+id/cusn"
            android:inputType="text" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_club"
            android:id="@+id/csb"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:id="@+id/ptl"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name99"
            android:inputType="text"
            android:id="@+id/pjid"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/Teckstack"
            android:id="@+id/Techspin"
            >
        </Spinner>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:entries="@array/Teckstack"
                android:id="@+id/Techspin2"
                >
            </Spinner>

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:entries="@array/Teckstack"
                android:id="@+id/Techspin3"
                >
            </Spinner>
        </LinearLayout>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Emailid"
            android:inputType="textEmailAddress"
            android:id="@+id/urltext"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_project"
            android:id="@+id/psb"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conducted_by"
            android:inputType="text"
            android:id="@+id/evid"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name99"
            android:inputType="text"
            android:id="@+id/evnm"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/venue"
            android:inputType="text"
            android:id="@+id/evvenue"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:id="@+id/evsb"/>

    </LinearLayout>
</ScrollView>